--- a/index.html
+++ b/index.html
@@ -12,54 +12,30 @@
         <br>Cuando quieras leer un texto que te de animos y que te haga
         <br> sentirte bien, pues, puedes visitarnos y sentirte mejor. Gracias por su visita
     </strong></p>
-     <h2 class="salmo"><em>Salmo 91: El Señor es nuestro refugio</em></h2>
+     <h2 class="salmo"><em>Oracion</em></h2>
        <p class="texto"><strong>
-        El que vive bajo la sombra protectora
-        <br>del Altisimo y Todopoderoso,
-        <br>dice al Señor: "Tu eres mi refugio,
-        mi castillo,¡Mi Dios en quien confio!"
+        Padre, tu eres el señor de mi vida,
+        <br>hablame con fuerza, con claridad,
+        <br>en esta historia que vivo,
+        <br>en las cosas que hago,
+        <br>en las realidades que experimento.
+        <br>Hablame para saber que pasos debo
+        <br>dar, que debo callar y que tengo que 
+        <br>gritar con fortaleza. En este dia
+        <br>quiero optar por lo que me llena,
+        <br>por lo que es importante, por lo que 
+        <br>me aporta algo. Dame sabiduria para 
+        <br>escoger un buen criterio
         <br>
-        Solo El puede librarte
-        <br>de trampas ocultas y plagas mortales,
-        pues te cubrira con sus alas,
-        <br>y bajo ellas estaras seguro.
-        ¡Su fidelidad te protegera como un
-        escudo!
-        <br>No tengas miedo a los peligros
-        nocturnos,
-        ni a las flechas lanzadas de dia,
-        ni a las plagas que llegan con la 
-        oscuridad,
-        <br>ni a las que destruyen a pleno sol;
-        pues mil caeran muertos a tu izquierda
-        y diez mil a tu derecha,
-        pero a ti nada te pasara.
         <br>
-        Solamente lo habras de presenciar:
-        Veras a los malvados recibir su 
-        merecido.
-        <br>
-        Ya que has hecho del Señor tu refugio,
-        del Altisimo tu lugar de proteccion,
-        <br>no te sobrevendra ningun mal
-        ni la enfermedad llegara a tu casa;
-        <br>pues El mandara que sus angeles
-        te cuiden por donde quiera que vayas.
-        <br>
-        Te levantaran con sus manos
-        para que no tropieces con piedra alguna.
-        <br>Podras andar entre leones,
-        entre monstruos y serpientes.
-        <br>
-        "Yo lo pondre a salvo,
-        fuera del alcance de Todos,
-        <br>porque el me ama y me conoce.
-        Cuando me llame, le contestare;
-        <br>¡Yo mismo estare con el 
-        lo librare de la angustia
-        y lo colmare de honores;
-        <br>lo hare disfrutar de una larga vida:
-        ¡Lo hare gozar de mi salvacion!"
+      <h2 class="salmo"><em>Saludando al Señor</em></h2>
+       <p class="texto"><strong>
+        Gracias Dios por este nuevo amanecer
+        <br>y por tantas bendiciones
+        <br>que nos das dia a dia
+        <br>Buenos Dias
+       </strong></p>  
+    
     </strong></p>   
     
 </body>
