--- a/index.html
+++ b/index.html
@@ -12,30 +12,34 @@
         <br>Cuando quieras leer un texto que te de animos y que te haga
         <br> sentirte bien, pues, puedes visitarnos y sentirte mejor. Gracias por su visita
     </strong></p>
-     <h2 class="salmo"><em>Oracion</em></h2>
+     <h2 class="salmo"><em>Salmo 138: Oracion de gratitud al Señor</em></h2>
        <p class="texto"><strong>
-        Padre, tu eres el señor de mi vida,
-        <br>hablame con fuerza, con claridad,
-        <br>en esta historia que vivo,
-        <br>en las cosas que hago,
-        <br>en las realidades que experimento.
-        <br>Hablame para saber que pasos debo
-        <br>dar, que debo callar y que tengo que 
-        <br>gritar con fortaleza. En este dia
-        <br>quiero optar por lo que me llena,
-        <br>por lo que es importante, por lo que 
-        <br>me aporta algo. Dame sabiduria para 
-        <br>escoger un buen criterio
-        <br>
-        <br>
-      <h2 class="salmo"><em>Saludando al Señor</em></h2>
-       <p class="texto"><strong>
-        Gracias Dios por este nuevo amanecer
-        <br>y por tantas bendiciones
-        <br>que nos das dia a dia
-        <br>Buenos Dias
-       </strong></p>  
-    
+        Te dare gracias Señor, de todo corazon:
+        <br>Te cantare himnos delante de los dioses
+        <br>Me arrodillare en direccion a tu
+        <br>santo templo, para darte gracias
+        <br>por tu amor y tu verdad,
+        <br> pues has puesto tu nombre y tu
+        <br>palabra, por encima de todas las cosas
+        <br>Cuando te llame, me respondiste
+        <br> y aumentaste mis fuerzas
+        <br> Todos los reyes del mundo te alabaran
+        <br>al escuchar tus promesas
+        <br>Alabaran al Señor por lo que El 
+        <br>ha dispuesto
+        <br>porque grande es la gloria del Señor
+        <br>Aunque el Señor esta en lo alto,
+        <br>se fija en el hombre humilde
+        <br>y de lejos reconoce al orgulloso
+        <br>Cuando me encuentro en peligro
+        <br>tu me mantienes con vida,
+        <br>despliegas tu poder y me salvas
+        <br>de la furia de mis enemigos
+        <br>¡El Señor llevara a feliz termino
+        <br>su accion en mi favor!
+        <br>Señor, tu amor es eterno,
+        <br>¡Señor, no dejes incompleto lo 
+        <br>que has emprendido!
     </strong></p>   
     
 </body>
