commit de nuevo

--- a/index.html
+++ b/index.html
@@ -7,40 +7,44 @@
     <link href="estilos.css" rel="stylesheet">
 </head>
 <body>
+   <div class="imagen"> 
     <h1>Palabra de Dios</h1>
        <p class="bienvenida"><strong>Bienvenidos a Palabra de Dios, tu contacto con el Señor. 
         <br>Cuando quieras leer un texto que te de animos y que te haga
         <br> sentirte bien, pues, puedes visitarnos y sentirte mejor. Gracias por su visita
     </strong></p>
-     <h2 class="salmo"><em>Salmo 138: Oracion de gratitud al Señor</em></h2>
+     <h2 class="salmo"><em>Salmo 13: Oracion pidiendo ayuda</em></h2>
        <p class="texto"><strong>
-        Te dare gracias Señor, de todo corazon:
-        <br>Te cantare himnos delante de los dioses
-        <br>Me arrodillare en direccion a tu
-        <br>santo templo, para darte gracias
-        <br>por tu amor y tu verdad,
-        <br> pues has puesto tu nombre y tu
-        <br>palabra, por encima de todas las cosas
-        <br>Cuando te llame, me respondiste
-        <br> y aumentaste mis fuerzas
-        <br> Todos los reyes del mundo te alabaran
-        <br>al escuchar tus promesas
-        <br>Alabaran al Señor por lo que El 
-        <br>ha dispuesto
-        <br>porque grande es la gloria del Señor
-        <br>Aunque el Señor esta en lo alto,
-        <br>se fija en el hombre humilde
-        <br>y de lejos reconoce al orgulloso
-        <br>Cuando me encuentro en peligro
-        <br>tu me mantienes con vida,
-        <br>despliegas tu poder y me salvas
-        <br>de la furia de mis enemigos
-        <br>¡El Señor llevara a feliz termino
-        <br>su accion en mi favor!
-        <br>Señor, tu amor es eterno,
-        <br>¡Señor, no dejes incompleto lo 
-        <br>que has emprendido!
-    </strong></p>   
-    
+        Señor:
+        <br>¿Hasta cuando me olvidaras?
+        <br>¿Me olvidaras para siempre?
+        <br>¿Hasta cuando te esconderas de mi?
+        <br>¿Hasta cuando mi alma y mi corazon
+        <br>habran de sufrir y estar tristes todo el dia?
+        <br>¿Hasta cuando habre de estar sometido al enemigo?
+        <br>Señor, Dios mio
+        <br>¡Mirame, respondeme, llena mis ojos de luz!
+        <br>¡Que no caiga yo en el sueño de la muerte!
+        <br>¡Que no diga mi enemigo:"Lo he vencido"! 
+        <br>¡Que no se alegre si yo fracaso! 
+        <br>Yo confio en tu amor;
+        <br>mi corazon se alegra porque tu me salvas.
+        <br>¡Cantare al señor por el bien que me ha hecho!
+        
+    </strong></p>
+    <br>
+    <br>
+    <h2 class="salmo"><em>Extractos del libro de JOB</em></h2>
+      <p class="texto"><strong>
+        Entonces Job se levanto, y lleno de dolor
+        <br>se rasgo la ropa, se rapo la cabeza y 
+        <br>se inclino en actitud de adoracion.
+        <br>Entonces dijo:
+        <br>"Desnudo vine a este mundo, 
+        <br>y desnudo saldre de el. El señor
+        <br>me lo dio todo, y el Señor me lo quito;
+        <br>¡Bendito sea el nombre del Señor!" 
+      </strong></p>   
+   </div>  
 </body>
 </html>
