--- a/index.html
+++ b/index.html
@@ -13,24 +13,63 @@
         <br>Cuando quieras leer un texto que te de animos y que te haga
         <br> sentirte bien, pues, puedes visitarnos y sentirte mejor. Gracias por su visita
     </strong></p>
-     <h2 class="salmo"><em>Salmo 13: Oracion pidiendo ayuda</em></h2>
+     <h2 class="salmo"><em>Salmo 103: Bendecire al Señor</em></h2>
        <p class="texto"><strong>
-        Señor:
-        <br>¿Hasta cuando me olvidaras?
-        <br>¿Me olvidaras para siempre?
-        <br>¿Hasta cuando te esconderas de mi?
-        <br>¿Hasta cuando mi alma y mi corazon
-        <br>habran de sufrir y estar tristes todo el dia?
-        <br>¿Hasta cuando habre de estar sometido al enemigo?
-        <br>Señor, Dios mio
-        <br>¡Mirame, respondeme, llena mis ojos de luz!
-        <br>¡Que no caiga yo en el sueño de la muerte!
-        <br>¡Que no diga mi enemigo:"Lo he vencido"! 
-        <br>¡Que no se alegre si yo fracaso! 
-        <br>Yo confio en tu amor;
-        <br>mi corazon se alegra porque tu me salvas.
-        <br>¡Cantare al señor por el bien que me ha hecho!
-        
+       Bendecire al Señor con toda mi alma;
+       <br>bendecire con todo mi ser su santo nombre.
+       <br>Bendecire al Señor con toda mi alma;
+       <br>no olvidare ninguno de sus beneficios.
+       <br>El es quien perdona todas mis maldades,
+       <br>quien sana todas mis enfermedades,
+       <br>quien libra mi vida del sepulcro,
+       <br>quien me colma de amor y ternura,
+       <br>quien me satisface con todo lo mejor
+       <br>y me rejuvenece como un aguila.
+       <br>
+       <br>El Señor juzga con verdadera justicia
+       <br>a los que sufren violencia.
+       <br>Dio a conocer sus caminos y sus hechos
+       <br>a Moises y al pueblo de Israel.
+       <br>El Señor es tierno y compasivo;
+       <br>es paciente y todo amor.
+       <br>No nos reprende en todo tiempo ni su 
+       <br>rencor es eterno;
+       <br>no nos ha dado el pago que merecen
+       <br>nuestras maldades y pecados;
+       <br>tan inmenso es su amor por los que lo 
+       <br>honran como inmenso es el cielo 
+       <br>sobre la tierra.
+       <br>Nuestros pecados ha alejado de nosotros,
+       <br>como ha alejado del oriente el occidente.
+       <br>El Señor es con los que lo honran,
+       <br>tan tierno como un padre con sus hijos;
+       <br>pues El sabe de que estamos hechos:
+       <br>sabe bien que somos polvo.
+       <br>
+       <br>La vida del hombre es como la hierba;
+       <br>brota como una flor silvestre:
+       <br>Tan pronto la azota el viento,
+       <br>deja de existir;
+       <br>y nadie vuelve a saber de ella.
+       <br>Pero el amor del Señor es eterno
+       <br>para aquellos que lo honran;
+       <br>su justicia es infinita
+       <br>por todas las generaciones,
+       <br>para los que cumplen con su alianza
+       <br>y no se olvidan de obedecer sus mandatos.
+       <br>
+       <br>El Señor ha puesto su trono en el cielo,
+       <br>y su reino domina sobre todo.
+       <br>
+       <br>¡Bendigan al Señor, angeles poderosos!
+       <br>Ustedes que cumplen sus ordenes,
+       <br>que estan atentos a obedecerlo.
+       <br>¡Bendigan al Señor todos sus ejercitos
+       <br>que lo sirven y hacen su voluntad!
+       <br>¡Bendiga al Señor la creacion entera,
+       <br>en todos los lugares de su reino!
+       <br>
+       <br>¡Bendecire al Señor con toda mi alma!  
     </strong></p>
     <br>
     <br>
