--- a/index.html
+++ b/index.html
@@ -8,82 +8,45 @@
 </head>
 <body>
    
-    <h1>Palabra de Dios</h1>
+  <img src="angeles1.webp" class="imagen">  
+  <div class="contenedor">
+  <h1>Palabra de Dios</h1>
        <p class="bienvenida"><strong>Bienvenidos a Palabra de Dios, tu contacto con el Señor. 
         <br>Cuando quieras leer un texto que te de animos y que te haga
         <br> sentirte bien, pues, puedes visitarnos y sentirte mejor. Gracias por su visita
-    </strong></p>
-     <h2 class="salmo"><em>Salmo 103: Bendecire al Señor</em></h2>
+   </strong></p>    
+   
+    <h2 class="salmo"><em>Proverbios 6: Advertencias contra dar fianza. Exhortacion a los perezosos:</em></h2>
        <p class="texto"><strong>
-       Bendecire al Señor con toda mi alma;
-       <br>bendecire con todo mi ser su santo nombre.
-       <br>Bendecire al Señor con toda mi alma;
-       <br>no olvidare ninguno de sus beneficios.
-       <br>El es quien perdona todas mis maldades,
-       <br>quien sana todas mis enfermedades,
-       <br>quien libra mi vida del sepulcro,
-       <br>quien me colma de amor y ternura,
-       <br>quien me satisface con todo lo mejor
-       <br>y me rejuvenece como un aguila.
+        <br>"Anda a ver a la hormiga, perezoso;
+        <br>fijate en lo que hace, y aprende la leccion:
+        <br>Aunque no tiene quien la mande
+        <br>ni quien le diga lo que hay que hacer,
+        <br>asegura su comida en el verano,
+        <br>la almacena durante la cosecha.
+        <br>¡Basta ya de dormir, perezoso!
+        <br>¡Basta ya de estar acostado!
+        <br>Mientras tu sueñas y cabeceas,
+        <br>y te cruzas de brazos para dormir mejor,
+        <br>la pobreza vendra y te atacara
+        <br>como un vagabundo armado"
+       </strong></p>
        <br>
-       <br>El Señor juzga con verdadera justicia
-       <br>a los que sufren violencia.
-       <br>Dio a conocer sus caminos y sus hechos
-       <br>a Moises y al pueblo de Israel.
-       <br>El Señor es tierno y compasivo;
-       <br>es paciente y todo amor.
-       <br>No nos reprende en todo tiempo ni su 
-       <br>rencor es eterno;
-       <br>no nos ha dado el pago que merecen
-       <br>nuestras maldades y pecados;
-       <br>tan inmenso es su amor por los que lo 
-       <br>honran como inmenso es el cielo 
-       <br>sobre la tierra.
-       <br>Nuestros pecados ha alejado de nosotros,
-       <br>como ha alejado del oriente el occidente.
-       <br>El Señor es con los que lo honran,
-       <br>tan tierno como un padre con sus hijos;
-       <br>pues El sabe de que estamos hechos:
-       <br>sabe bien que somos polvo.
+       <h2 class="salmo">Proverbios 6: Advertencias contra dar fianza. Lo que el Señor aborrece:</h2>
        <br>
-       <br>La vida del hombre es como la hierba;
-       <br>brota como una flor silvestre:
-       <br>Tan pronto la azota el viento,
-       <br>deja de existir;
-       <br>y nadie vuelve a saber de ella.
-       <br>Pero el amor del Señor es eterno
-       <br>para aquellos que lo honran;
-       <br>su justicia es infinita
-       <br>por todas las generaciones,
-       <br>para los que cumplen con su alianza
-       <br>y no se olvidan de obedecer sus mandatos.
-       <br>
-       <br>El Señor ha puesto su trono en el cielo,
-       <br>y su reino domina sobre todo.
-       <br>
-       <br>¡Bendigan al Señor, angeles poderosos!
-       <br>Ustedes que cumplen sus ordenes,
-       <br>que estan atentos a obedecerlo.
-       <br>¡Bendigan al Señor todos sus ejercitos
-       <br>que lo sirven y hacen su voluntad!
-       <br>¡Bendiga al Señor la creacion entera,
-       <br>en todos los lugares de su reino!
-       <br>
-       <br>¡Bendecire al Señor con toda mi alma!  
-    </strong></p>
-    <br>
-    <br>
-    <h2 class="salmo"><em>Extractos del libro de JOB</em></h2>
-      <p class="texto"><strong>
-        Entonces Job se levanto, y lleno de dolor
-        <br>se rasgo la ropa, se rapo la cabeza y 
-        <br>se inclino en actitud de adoracion.
-        <br>Entonces dijo:
-        <br>"Desnudo vine a este mundo, 
-        <br>y desnudo saldre de el. El señor
-        <br>me lo dio todo, y el Señor me lo quito;
-        <br>¡Bendito sea el nombre del Señor!" 
-      </strong></p>   
+       <p class="texto"><strong>
+        "Hay seis cosas y hasta siete,
+       <br> que el Señor aborrece por completo:
+        <br>Los ojos altaneros,
+        <br>la lengua mentirosa,
+        <br>las manos que asesinan a gente inocente,
+        <br>la mente que elabora planes perversos,
+        <br>los pies que corren ansiosos al mal,
+        <br>el testigo falso y mentiroso,
+        <br>y el que provoca peleas entre hermanos"
+      </strong></p>
+    </div>
+      
    
 </body>
 </html>
