--- a/index.html
+++ b/index.html
@@ -15,34 +15,66 @@
         <br> sentirte bien, pues, puedes visitarnos y sentirte mejor. Gracias por su visita
    </strong></p>    
    
-    <h2 class="salmo"><em>Proverbios 6: Advertencias contra dar fianza. Exhortacion a los perezosos:</em></h2>
+    <h2 class="salmo"><em>Salmo 111: Alabanza de los actos de Dios</em></h2>
        <p class="texto"><strong>
-        <br>"Anda a ver a la hormiga, perezoso;
-        <br>fijate en lo que hace, y aprende la leccion:
-        <br>Aunque no tiene quien la mande
-        <br>ni quien le diga lo que hay que hacer,
-        <br>asegura su comida en el verano,
-        <br>la almacena durante la cosecha.
-        <br>¡Basta ya de dormir, perezoso!
-        <br>¡Basta ya de estar acostado!
-        <br>Mientras tu sueñas y cabeceas,
-        <br>y te cruzas de brazos para dormir mejor,
-        <br>la pobreza vendra y te atacara
-        <br>como un vagabundo armado"
+        <br>"Alabare al Señor de todo corazon
+        en la reunion de los hombres honrados,
+        en la comunidad entera.
+        <br>Las obras del Señor son grandes,
+        <br>y quienes las aman las estudian.
+        <br>Su obra es bella y esplendorosa,
+        <br>y su justicia permanece para siempre.
+        <br>Ha hecho inolvidables sus maravillas.
+        <br>El Señor es tierno y compasivo;
+        <br>da alimentos a los que lo honran;
+        <br>¡Se acuerda siempre de su alianza!
+        <br>Mostro a su pueblo el poder de sus obras,
+        <br>dandole lo que era posesion de los paganos.
+        <br>Lo que El hace es justo y verdadero;
+        <br>se puede confiar en sus mandamientos,
+        <br>pues son firmes hasta la eternidad
+        <br>y estan hechos con verdad y rectitud.
+        <br>Dio libertad a su pueblo
+        <br>y afirmo su alianza para siempre.
+        <br>Dios es santo y terrible.
+        <br>La mayor sabiduria consiste en honrar al Señor;
+        <br>los que lo honran, tienen buen juicio.
+        ¡Dios sera siempre alabado!"
        </strong></p>
        <br>
-       <h2 class="salmo">Proverbios 6: Advertencias contra dar fianza. Lo que el Señor aborrece:</h2>
+       <h2 class="salmo">Genesis capitulo 22, versiculo 9:</h2>
        <br>
        <p class="texto"><strong>
-        "Hay seis cosas y hasta siete,
-       <br> que el Señor aborrece por completo:
-        <br>Los ojos altaneros,
-        <br>la lengua mentirosa,
-        <br>las manos que asesinan a gente inocente,
-        <br>la mente que elabora planes perversos,
-        <br>los pies que corren ansiosos al mal,
-        <br>el testigo falso y mentiroso,
-        <br>y el que provoca peleas entre hermanos"
+        "Cuando llegaron al lugar que Dios habia dicho,
+        <br>Abraham construyo un altar y preparo la leña;
+        <br>luego ato a su hijo Isaac y lo puso en el altar,
+        <br>sobre la leña; pero en el momento de tomar el cuchillo
+        <br>para sacrificar a su hijo, el angel del Señor lo llamo desde el cielo:
+        <br>¡Abraham! ¡Abraham!
+        <br>Aqui estoy-contesto el
+        <br>El angel le dijo:
+        <br>No le hagas ningun daño al muchacho,
+        <br>porque ya se que tienes temor de Dios, pues no te negaste
+        <br>a darme tu unico hijo.
+        <br>Abraham se fijo y vio un carnero que estaba enredado
+        <br>por los cuernos entre las ramas de un arbusto; entonces fue
+        <br>tomo el carnero y lo ofrecio en holocausto, en lugar de su hijo
+        <br>Despues Abraham le puso este nombre a aquel lugar:
+        <br>El señor da lo necesario.
+        <br>Por eso todavia se dice:
+        <br>En el cerro, El Señor da lo necesario
+        <br>El angel del Señor llamo a Abraham desde el cielo
+        <br>por segunda vez, y le dijo:
+        <br>El Señor ha dicho: Puesto que has hecho esto,
+        <br>y no me has negado a tu unico hijo, juro por 
+        <br>mi mismo que te bendecire mucho. 
+        <br>Hare que tu descendencia sea tan numerosa como 
+        <br>las estrellas del cielo y como la arena que hay
+        <br>a la orilla del mar. Ademas ellos siempre venceran
+        <br>a sus enemigos, y todas las naciones del mundo
+        <br>seran bendecidas por medio de ellos,
+        <br>porque me has obedecido"
+
       </strong></p>
     </div>
       
