--- a/index.html
+++ b/index.html
@@ -15,66 +15,49 @@
         <br> sentirte bien, pues, puedes visitarnos y sentirte mejor. Gracias por su visita
    </strong></p>    
    
-    <h2 class="salmo"><em>Salmo 111: Alabanza de los actos de Dios</em></h2>
+    <h2 class="salmo"><em>texto anonimo</em></h2>
        <p class="texto"><strong>
-        <br>"Alabare al Señor de todo corazon
-        en la reunion de los hombres honrados,
-        en la comunidad entera.
-        <br>Las obras del Señor son grandes,
-        <br>y quienes las aman las estudian.
-        <br>Su obra es bella y esplendorosa,
-        <br>y su justicia permanece para siempre.
-        <br>Ha hecho inolvidables sus maravillas.
-        <br>El Señor es tierno y compasivo;
-        <br>da alimentos a los que lo honran;
-        <br>¡Se acuerda siempre de su alianza!
-        <br>Mostro a su pueblo el poder de sus obras,
-        <br>dandole lo que era posesion de los paganos.
-        <br>Lo que El hace es justo y verdadero;
-        <br>se puede confiar en sus mandamientos,
-        <br>pues son firmes hasta la eternidad
-        <br>y estan hechos con verdad y rectitud.
-        <br>Dio libertad a su pueblo
-        <br>y afirmo su alianza para siempre.
-        <br>Dios es santo y terrible.
-        <br>La mayor sabiduria consiste en honrar al Señor;
-        <br>los que lo honran, tienen buen juicio.
-        ¡Dios sera siempre alabado!"
+        <br>Dios bueno, grande y misericordioso,
+        <br>en este nuevo amanecer quiero darte
+        <br>gracias por esta bondad que tienes
+        <br>para mi. Hoy me levanto seguro de 
+        <br>que me amas, de que estas conmigo,
+        <br>que me sostienes, que me ayudas, 
+        <br>que me muestras tu luz y me haces
+        <br>sentir bendecido. Gloria al Señor
+        <br>que me regalo esta mañana nueva, 
+        <br>que construyo el sol y la tierra,
+        <br>las montañas y el viento, la luz,
+        <br>bendito Dios el creador de todo 
+        <br>cuanto existe que hoy me regala un 
+        <br>nuevo dia, para mi bendicion, mi 
+        <br>familia y toda la gente que amo
        </strong></p>
        <br>
-       <h2 class="salmo">Genesis capitulo 22, versiculo 9:</h2>
+       <h2 class="salmo">texto anonimo</h2>
        <br>
        <p class="texto"><strong>
-        "Cuando llegaron al lugar que Dios habia dicho,
-        <br>Abraham construyo un altar y preparo la leña;
-        <br>luego ato a su hijo Isaac y lo puso en el altar,
-        <br>sobre la leña; pero en el momento de tomar el cuchillo
-        <br>para sacrificar a su hijo, el angel del Señor lo llamo desde el cielo:
-        <br>¡Abraham! ¡Abraham!
-        <br>Aqui estoy-contesto el
-        <br>El angel le dijo:
-        <br>No le hagas ningun daño al muchacho,
-        <br>porque ya se que tienes temor de Dios, pues no te negaste
-        <br>a darme tu unico hijo.
-        <br>Abraham se fijo y vio un carnero que estaba enredado
-        <br>por los cuernos entre las ramas de un arbusto; entonces fue
-        <br>tomo el carnero y lo ofrecio en holocausto, en lugar de su hijo
-        <br>Despues Abraham le puso este nombre a aquel lugar:
-        <br>El señor da lo necesario.
-        <br>Por eso todavia se dice:
-        <br>En el cerro, El Señor da lo necesario
-        <br>El angel del Señor llamo a Abraham desde el cielo
-        <br>por segunda vez, y le dijo:
-        <br>El Señor ha dicho: Puesto que has hecho esto,
-        <br>y no me has negado a tu unico hijo, juro por 
-        <br>mi mismo que te bendecire mucho. 
-        <br>Hare que tu descendencia sea tan numerosa como 
-        <br>las estrellas del cielo y como la arena que hay
-        <br>a la orilla del mar. Ademas ellos siempre venceran
-        <br>a sus enemigos, y todas las naciones del mundo
-        <br>seran bendecidas por medio de ellos,
-        <br>porque me has obedecido"
-
+        Hoy abro mis ojos y digo gracias a Dios:
+        <br>por mi vida, por las nuevas historias
+        <br>que has preparado con amor para mi
+        <br>por los bellos momentos que empiezo a 
+        <br>compartir con las personas que amo.
+        <br>Hoy abro mis brazos y me dispongo a 
+        <br>recibir y valorar cada una de las 
+        <br>bendiciones. Asi es, hecho esta
+      </strong></p>
+      <h2 class="salmo">texto anonimo</h2>
+      <br>
+      <p class="texto"><strong>
+        Padre bueno, bendice a cada hermano que te pide
+        <br>bendicion, cumple sus sueños, cuida sus pasos
+        <br>e iluminalos en todo. Gracias Señor, por abrir
+        <br>mis ojos y mi corazon, porque desde que te deje
+        <br>entrar has hecho maravillas conmigo, me has llenado
+        <br>de milagros, no dejas de darme cosas. Gracias por 
+        <br>permitirme sentir la felicidad de recorrer mi cuerpo.
+        <br>Te entrego este dia y todo lo que deseo hacer en 
+        <br>el, yo se que Tu me acompañas
       </strong></p>
     </div>
       
